[gd_scene load_steps=31 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Assets/gorilla/RUN/sprite_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/gorilla/RUN/sprite_3.png" type="Texture" id=3]
[ext_resource path="res://Scripts/plr_move_state.gd" type="Script" id=4]
[ext_resource path="res://Assets/gorilla/RUN/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/gorilla/RUN/sprite_4.png" type="Texture" id=6]
[ext_resource path="res://Assets/gorilla/IDLE/sprite_1.png" type="Texture" id=7]
[ext_resource path="res://Assets/gorilla/IDLE/sprite_0.png" type="Texture" id=8]
[ext_resource path="res://Assets/gorilla/DANCE/sprite_0.png" type="Texture" id=9]
[ext_resource path="res://Assets/gorilla/JUMP/sprite_2.png" type="Texture" id=10]
[ext_resource path="res://Assets/gorilla/JUMP/sprite_1.png" type="Texture" id=11]
[ext_resource path="res://Assets/gorilla/JUMP/sprite_3.png" type="Texture" id=12]
[ext_resource path="res://Assets/gorilla/ATTACK/sprite_5.png" type="Texture" id=13]
[ext_resource path="res://Assets/gorilla/DANCE/sprite_1.png" type="Texture" id=14]
[ext_resource path="res://Assets/gorilla/ATTACK/sprite_2.png" type="Texture" id=15]
[ext_resource path="res://Assets/gorilla/ATTACK/sprite_4.png" type="Texture" id=16]
[ext_resource path="res://Assets/gorilla/ATTACK/sprite_3.png" type="Texture" id=17]
[ext_resource path="res://Assets/gorilla/ATTACK/sprite_0.png" type="Texture" id=18]
[ext_resource path="res://Assets/gorilla/ATTACK/sprite_1.png" type="Texture" id=19]
[ext_resource path="res://Scripts/plr_action_state.gd" type="Script" id=20]
[ext_resource path="res://Assets/time_freeze/Untitled.png" type="Texture" id=21]
[ext_resource path="res://Assets/gorilla/WALL_SLIDE/sprite_1.png" type="Texture" id=22]
[ext_resource path="res://Assets/gorilla/WALL_SLIDE/sprite_0.png" type="Texture" id=23]
[ext_resource path="res://Assets/gorilla/WALL_SLIDE/sprite_2.png" type="Texture" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 14 )

[sub_resource type="CircleShape2D" id=2]
radius = 17.3506

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ), ExtResource( 12 ), ExtResource( 22 ) ],
"loop": false,
"name": "wall_slide",
"speed": 10.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="CanvasItemMaterial" id=4]

[sub_resource type="Animation" id=5]
resource_name = "def"
length = 0.1

[sub_resource type="Animation" id=6]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.49, -56.9741, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.435294, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="plr_move_state" type="Node" parent="."]
script = ExtResource( 4 )

[node name="plr_action_state" type="Node" parent="."]
script = ExtResource( 20 )

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="grab_range" type="Area2D" parent="."]
modulate = Color( 0.0352941, 0.313726, 0.156863, 1 )
self_modulate = Color( 0.360784, 1, 0, 1 )
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="grab_range"]
position = Vector2( 0, -4 )
shape = SubResource( 2 )

[node name="ground_rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="ground_rays"]
position = Vector2( 10, 14 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="ground_rays"]
position = Vector2( -9, 14 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="RayCast2D3" type="RayCast2D" parent="ground_rays"]
position = Vector2( 0, 14 )
enabled = true
cast_to = Vector2( 0, 7 )
collision_mask = 2

[node name="wall_rays_left" type="Node2D" parent="."]
visible = false

[node name="RayCast2D" type="RayCast2D" parent="wall_rays_left"]
position = Vector2( 12, -7 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="wall_rays_left"]
position = Vector2( 12, 8 )
enabled = true
cast_to = Vector2( 1, 0 )
collision_mask = 2

[node name="wall_rays_right" type="Node2D" parent="."]
visible = false

[node name="RayCast2D" type="RayCast2D" parent="wall_rays_right"]
position = Vector2( -12, -7 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 2

[node name="RayCast2D2" type="RayCast2D" parent="wall_rays_right"]
position = Vector2( -12, 8 )
enabled = true
cast_to = Vector2( -1, 0 )
collision_mask = 2

[node name="body" type="Node2D" parent="."]
z_index = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="body"]
position = Vector2( -1, -0.905531 )
frames = SubResource( 3 )
animation = "idle"
frame = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -17.0
margin_top = 15.0
margin_right = 39.0
margin_bottom = 48.0
text = "salut"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = -18.0
margin_top = -27.0
margin_right = 35.0
margin_bottom = 6.0
text = "wddw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 0, -20 )
current = true
smoothing_enabled = true
smoothing_speed = 10.0

[node name="green_grad" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
material = SubResource( 4 )
position = Vector2( -0.280487, -3.84972 )
scale = Vector2( 0.400629, 0.28232 )
z_index = 1
texture = ExtResource( 21 )

[node name="animation_player" type="AnimationPlayer" parent="."]
root_node = NodePath("../green_grad")
method_call_mode = 1
anims/def = SubResource( 5 )
anims/turn_tf = SubResource( 6 )
[connection signal="body_entered" from="grab_range" to="." method="_on_grab_range_body_entered"]
[connection signal="body_exited" from="grab_range" to="." method="_on_grab_range_body_exited"]
[connection signal="animation_finished" from="body/AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
